# ObsidianBox-Modern

./: PRIVACY_POLICY.md  PUBLICATION_SUMMARY.md  README.md  TERMS_OF_SERVICE.md  VERIFICATION_REPORT.md
diagnostics/: SystemInfoProvider.kt
diagnostics/engine/: DiagnosticsEngine.kt
native/cpp/: CMakeLists.txt  obsidianbox_bridge.cpp  terminal_pty.cpp
native/jni/: NativeBridge.kt
native/rust/: Cargo.toml  cgroup.rs  diagnostics.rs  lib.rs  magisk.rs  obsidianbox.rs  partition.rs  permission.rs  result.rs  safety.rs  selinux.rs  snapshot.rs  symlink.rs  terminal.rs
root/: ObsidianBoxCapabilities.kt  RootDetector.kt  RootDetectorImpl.kt  RootStatus.kt  TerminalCommandValidator.kt
shell/: RootShell.kt  ShellSanitizer.kt
