[package]
name = "obsidian_native"
version = "1.0.0"
edition = "2021"
authors = ["ObsidianBox Team"]
description = "Native Rust library for ObsidianBox Android app"

[lib]
name = "obsidianbox"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# JNI bindings
jni = { version = "0.21", features = ["invocation"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
walkdir = "2.4"

# Logging
log = "0.4"
android_logger = "0.13"

# System interface
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# PTY operations (for terminal)
# Note: nix 0.29 requires "poll" feature for select functionality
nix = { version = "0.29", features = ["term", "signal", "fs", "process", "poll"] }
lazy_static = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
